--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+/* 
 html,
 body {
   padding: 0;
@@ -15,6 +19,8 @@ a {
   box-sizing: border-box;
 }
 
+
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
@@ -23,4 +29,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
